# gateau

./: .gitignore  Gateau.cmake  GateauAddTarget.cmake  GateauAddTest.cmake  GateauCompilerOptions.cmake  GateauConfigure.cmake  GateauDoxygen.cmake  GateauExternalPackage.cmake  GateauFindPackage.cmake  GateauHelpers.cmake  GateauInstallProject.cmake  GateauParseArguments.cmake  GateauProject.cmake  GateauProtobuf.cmake  GateauQtHelpers.cmake  README.md  SoCute.cmake  SoCuteAddTarget.cmake  SoCuteAddTest.cmake  SoCuteCompilerOptions.cmake  SoCuteDoxygen.cmake  SoCuteExternalPackage.cmake  SoCuteFindPackage.cmake  SoCuteHelperMacros.cmake  SoCuteHelpers.cmake  SoCuteInstallProject.cmake  SoCuteParseArguments.cmake  SoCuteProject.cmake  SoCuteQtHelpers.cmake  SoCuteSystemVars.cmake  Socute.cmake  SocuteAddTarget.cmake  SocuteAddTest.cmake  SocuteCompilerOptions.cmake  SocuteConfig.cmake  SocuteDoxygen.cmake  SocuteExternalPackage.cmake  SocuteFindPackage.cmake  SocuteHelpers.cmake  SocuteInstallProject.cmake  (+3 more)
ci/: gitlab-ci-qt.yml
cpp/: version.h.in
example/: CMakeLists.txt
example/src/: CMakeLists.txt  Foo.cpp  Foo.h  Printer.cpp  Printer.h  main.cpp
example/src/SoCute/Example/: CMakeLists.txt  Foo.cpp  Foo.h  Printer.cpp  Printer.h  main.cpp
examples/readme/: CMakeLists.txt  README.md
examples/readme/src/: CMakeLists.txt
examples/readme/src/bakery/: CMakeLists.txt  bakery.cpp
examples/readme/src/eclair/: CMakeLists.txt  eclair.cpp  eclair.hpp
examples/readme/test/: CMakeLists.txt  test-lib.cpp
examples/use_readme/: CMakeLists.txt  README.md  main.cpp
gitlab-ci/: gitlab-ci-qt.yml
templates/: BuildDepProject.cmake.in  CreateDepInstallManifest.cmake.in  DepCustomTargets.cmake.in  Doxyfile.in  HeadersOnlyPackageFile.cmake.in  InstallDepTarget.cmake.in  PackageConfig.cmake.in  SingleHeaderPackageFile.cmake.in  SoCutePackage.cmake.in  UninstallDepScript.cmake.in  version.h.in
toolchains/: clang-linux64.cmake  gcc-linux64.cmake  mingw-win64.cmake  toolchain-clang-linux64.cmake  toolchain-gcc-linux64.cmake  toolchain-mingw-win64.cmake
